<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#23374F"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/face"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="14dp"
                android:text="Credit/Debit Card"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/puce_card"/>

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="0000 0000 0000 0000"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/cardExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Exp date:--/--"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cardOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="------"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/cardType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:baselineAlignBottom="true" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="128dp"
                android:background="@drawable/card_back_img">

                <TextView
                    android:id="@+id/cvcNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:gravity="end"
                    android:text="---"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:src="@drawable/image_back"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/card_text"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:text="Enter credentials for checking"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:maxLines="1"
        app:errorEnabled="false"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeErrorColor="#DB5454">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/cardnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:maxLines="1"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeErrorColor="#DB5454">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardnumEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterCardNum"
            android:inputType="number"
            android:maxLength="19"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_ccv"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeErrorColor="#DB5454">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_ccvEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterCCV"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeErrorColor="#DB5454">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:inputType="date"
                android:maxLength="5"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_to_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center_horizontal"
        android:text="Check card"
        android:background="@drawable/button_bg"/>

</LinearLayout>